Bug 291010 - Folders in favourites (list mode) are shortenend without need
Summary: Folders in favourites (list mode) are shortenend without need
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-09 00:47 UTC by m.wege
Modified: 2012-01-24 13:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
inbox in normal folder list (1.85 KB, image/png)
2012-01-09 00:47 UTC, m.wege
Details
inbox in favourites (2.26 KB, image/png)
2012-01-09 00:47 UTC, m.wege
Details
folder networks in normal folder list (1.72 KB, image/png)
2012-01-09 00:48 UTC, m.wege
Details
folder networks in favourites (1.26 KB, image/png)
2012-01-09 00:48 UTC, m.wege
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-01-09 00:47:07 UTC
Created attachment 67598 [details]
inbox in normal folder list

Version:           1.99.0 (using Devel) 
OS:                Linux

I have set my favourite folder list to be in list mode. Favourite folder which contain unread mail(s) are only shown with a shortened name (exception Inbox, which shows the full name, but three dots) and three dots. This happens totally with out need, there is enough space and in the normal folder list they are shown normally. 
I attach screenshots as example.

Reproducible: Always

Steps to Reproduce:
see above

Actual Results:  
see above

Expected Results:  
the name should only be shortened when needed (rather unlikely)

OS: Linux (x86_64) release 3.2.0-8-generic
Compiler: gcc
Comment 1 m.wege 2012-01-09 00:47:44 UTC
Created attachment 67599 [details]
inbox in favourites
Comment 2 m.wege 2012-01-09 00:48:15 UTC
Created attachment 67600 [details]
folder networks in normal folder list
Comment 3 m.wege 2012-01-09 00:48:52 UTC
Created attachment 67601 [details]
folder networks in favourites
Comment 4 Laurent Montel 2012-01-13 14:13:03 UTC
I confirm it. And already tried to fix it. But not success yet
Comment 5 Laurent Montel 2012-01-24 13:33:38 UTC
Git commit 58680f4c9ddacf23a4dca5c271b44d7af477c243 by Montel Laurent.
Committed on 24/01/2012 at 14:33.
Pushed by mlaurent into branch 'master'.

Fix Bug 291010 - Folders in favourites (list mode) are shortenend

without need

FIXED-IN: 4.8.1

M  +7    -5    akonadi/collectionstatisticsdelegate.cpp

http://commits.kde.org/kdepimlibs/58680f4c9ddacf23a4dca5c271b44d7af477c243
Comment 6 Laurent Montel 2012-01-24 13:34:07 UTC
Git commit b7c406125cf9ea724c2ae3a2b2a5cb966021526e by Montel Laurent.
Committed on 24/01/2012 at 14:33.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 291010 - Folders in favourites (list mode) are shortenend

without need

FIXED-IN: 4.8.1
(cherry picked from commit 58680f4c9ddacf23a4dca5c271b44d7af477c243)

M  +7    -4    akonadi/collectionstatisticsdelegate.cpp

http://commits.kde.org/kdepimlibs/b7c406125cf9ea724c2ae3a2b2a5cb966021526e