Fix Bug 291010 - Folders in favourites (list mode) are shortenend

without need

FIXED-IN: 4.8.1
BUG: 291010