collectionstatisticsdelegate.cpp
@@ -262,6 +262,7 @@ void CollectionStatisticsDelegate::paint( QPainter *painter,
     }
 
     const QColor unreadColor = (option.state & QStyle::State_Selected) ? d->mSelectedUnreadColor : d->mDeselectedUnreadColor;
+    const QRect iconRect = s->subElementRect( QStyle::SE_ItemViewItemDecoration, &option4, widget );
 
     if ( option.decorationPosition == QStyleOptionViewItem::Left
          || option.decorationPosition == QStyleOptionViewItem::Right ) {
@@ -269,17 +270,19 @@ void CollectionStatisticsDelegate::paint( QPainter *painter,
       // where the folder text and the unread count will be drawn to
       QString folderName = text;
       QFontMetrics fm( painter->fontMetrics() );
-      int unreadWidth = fm.width( unread );
+      const int unreadWidth = fm.width( unread );
       int folderWidth( fm.width( folderName ) );
-      if ( folderWidth + unreadWidth > textRect.width() ) {
+      const bool enoughPlaceForText = ( option.rect.width() > ( folderWidth + unreadWidth + iconRect.width() ) );
+
+       if ( !enoughPlaceForText && ( folderWidth + unreadWidth > textRect.width() )) {
         folderName = fm.elidedText( folderName, Qt::ElideRight,
-                                   textRect.width() - unreadWidth );
+                                    option.rect.width() - unreadWidth - iconRect.width() );
         folderWidth = fm.width( folderName );
       }
       QRect folderRect = textRect;
       QRect unreadRect = textRect;
       folderRect.setRight( textRect.left() + folderWidth );
-      unreadRect.setLeft( folderRect.right() );
+      unreadRect = QRect( folderRect.right(), folderRect.top(), unreadRect.width(), unreadRect.height() );
       if ( textColor.isValid() )
         painter->setPen( textColor );
 
@@ -291,7 +294,6 @@ void CollectionStatisticsDelegate::paint( QPainter *painter,
       if ( unreadCount > 0 ) {
         // draw over the icon
         painter->setPen( unreadColor );
-        const QRect iconRect = s->subElementRect( QStyle::SE_ItemViewItemDecoration, &option4, widget );
         painter->drawText( iconRect, Qt::AlignCenter, QString::number( unreadCount ) );
       }
     }
